styles3.css
/* Navbar */

* {
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    box-sizing: border-box;
}

img:hover {
    transform: scale(1.1);
}


.background {
    background-color: #d1cfc8;
}

html, body {
    margin: 0;
    padding: 0;
}


body {
    min-height: 100vh;
    width: 100%;
}


p {
    font-weight: 800;
}

#toplinks {
    display: flex;
    gap: 10px;
    margin-left: auto;
    list-style: none;
}

  li:hover {
    transform: scale(1.5);
}

a {
    text-decoration: none;
    color: black;
    margin-right: 20px;
}

h1 {
    font-weight: bold;
    font-size: 40px;
    display: flex;
    margin: 15px 10px;
    color: black;
    margin-left: 15px;
}

.mainContainer {
    display: flex;
    flex-direction: column;
}

.navbar {
    display: flex;
    justify-content: center;
    background-color: #d1cfc8;
}

/* Body */

@media (max-width: 400px) {
    .products {
        display: block;
    }
    }

.products {
    margin: 0 0 20px 0;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.box .products {
    flex: 1;
}

.products img {
    width: 350px;
    height: 350px;
    border-radius: 5px;
    object-fit: cover;
    margin: 5px 30px 5px 30px;
}

.pic {
    display: flex;
    color: black;
    align-items: center;
    justify-content: center;
}

.intro {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 30px;
}

/* Link Prompt */

.link-prompt {
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: bolder;
    font-size: 20px;
    text-decoration: underline;
}

